--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-     <title>Food App in vue Js</title>
+     <title>Food App</title>
   </head>
   <body>
     <noscript>
